--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "friends",
+  "name": "TelegramBotCollege",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "start": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@telegram-apps/sdk": "^1.1.3",
-    "@telegram-apps/telegram-ui": "^2.1.4",
+    "@telegram-apps/telegram-ui": "^2.1.7",
     "axios": "^1.7.3",
     "axios-retry": "^4.5.0",
     "framer-motion": "^11.3.24",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "scss": "^0.2.4"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@eslint/js": "^9.8.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "sass": "^1.77.8",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "eslint": "^9.8.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.0",
+    "vite": "^5.4.0"
   }
 }
