--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@telegram-apps/sdk": "^1.1.3",
+    "@telegram-apps/sdk-react": "^1.1.3",
     "@telegram-apps/telegram-ui": "^2.1.7",
     "axios": "^1.7.3",
     "axios-retry": "^4.5.0",
@@ -31,7 +32,7 @@
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.0"
   },
- "optionalDependencies": {
+  "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
