--- a/bot/package.json
+++ b/bot/package.json
@@ -23,7 +23,6 @@
     "nodemon": "^3.1.0",
     "pdf-data-parser": "^1.2.10",
     "pdf-parse": "^1.1.1",
-    "pdf2json": "^3.1.2",
-    "pdfjs-dist": "^4.2.67"
+    "pdf2json": "^3.1.2"
   }
 }
