--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@telegram-apps/react-router-integration": "^1.0.1",
     "@telegram-apps/sdk": "^1.1.3",
     "@telegram-apps/sdk-react": "^1.1.3",
     "@telegram-apps/telegram-ui": "^2.1.7",
@@ -17,7 +18,8 @@
     "axios-retry": "^4.5.0",
     "framer-motion": "^11.3.24",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
