--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "framer-motion": "^11.3.24",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-tads-widget": "^0.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
